[gd_scene load_steps=7 format=2]

[ext_resource path="res://Assets/barrel.png" type="Texture" id=1]
[ext_resource path="res://src/Scripts/Barrels.gd" type="Script" id=2]
[ext_resource path="res://Assets/Fire sprite sheet.png" type="Texture" id=3]
[ext_resource path="res://Resources/FireAnimation.tres" type="Animation" id=4]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 18, 28 )

[sub_resource type="CircleShape2D" id=2]
radius = 205.061

[node name="Barrel" type="StaticBody2D"]
collision_layer = 2
script = ExtResource( 2 )
__meta__ = {
"_edit_horizontal_guides_": [  ],
"_edit_vertical_guides_": [  ]
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/Fire = ExtResource( 4 )

[node name="barrel" type="Sprite" parent="."]
scale = Vector2( 2, 2 )
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -2, 0 )
shape = SubResource( 1 )

[node name="Fire sprite sheet" type="Sprite" parent="."]
modulate = Color( 1, 1, 1, 0.717647 )
position = Vector2( -1, -69 )
texture = ExtResource( 3 )
hframes = 3
vframes = 2
frame = 5

[node name="Safe zone" type="Area2D" parent="."]
monitorable = false
collision_layer = 2

[node name="Heat radiate" type="CollisionShape2D" parent="Safe zone"]
shape = SubResource( 2 )

[node name="Timer" type="Timer" parent="."]
wait_time = 6.0

[connection signal="area_entered" from="Safe zone" to="." method="_on_Safe_zone_area_entered"]
[connection signal="area_exited" from="Safe zone" to="." method="_on_Safe_zone_area_exited"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
